--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,7 @@ dependencies {
 
     testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
+    //implement by me
+    compile group: 'org.clapper', name: 'javautil', version: '3.2.0'
 }
